--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,9 @@
 <script src="js/config.js"></script>
 <script src="js/directives.js"></script>
 <script src="js/services.js"></script>
+<script src="js/components/customer/customerService.js"></script>
+<script src="js/components/customer/customerController.js"></script>
+
 <script src="js/controllers.js"></script>
 
 </body>
