--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,7 @@
 <script src="js/services.js"></script>
 <script src="js/components/customer/customerService.js"></script>
 <script src="js/components/customer/customerController.js"></script>
-
+<script src="js/components/customer/customerDirective.js"></script>
 <script src="js/controllers.js"></script>
 
 </body>
