--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,9 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 
+<!-- UnderscoreJS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
 <!-- Main Angular scripts-->
 <!--<script src="js/angular/angular.min.js"></script>-->
 <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js'></script>
