--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,9 @@
 <script src="js/components/customer/customerService.js"></script>
 <script src="js/components/customer/customerController.js"></script>
 <script src="js/components/customer/customerDirective.js"></script>
+<script src="js/components/project/projectService.js"></script>
+<script src="js/components/project/projectController.js"></script>
+<script src="js/components/project/projectDirective.js"></script>
 <script src="js/controllers.js"></script>
 
 </body>
