--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,6 +77,9 @@
 <script src="js/components/project/projectService.js"></script>
 <script src="js/components/project/projectController.js"></script>
 <script src="js/components/project/projectDirective.js"></script>
+<script src="js/components/article/articleService.js"></script>
+<script src="js/components/article/articleController.js"></script>
+<script src="js/components/article/articleDirective.js"></script>
 <script src="js/controllers.js"></script>
 
 </body>
