--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,6 +80,8 @@
 <script src="js/components/article/articleService.js"></script>
 <script src="js/components/article/articleController.js"></script>
 <script src="js/components/article/articleDirective.js"></script>
+<script src="js/components/settings/settingService.js"></script>
+<script src="js/components/settings/settingController.js"></script>
 <script src="js/controllers.js"></script>
 
 </body>
